src/styles/order-service.less
// Breakpoint for showing a smaller icon and service title.
@order-service-title-sm-min: 450px;
@order-service-page-height: 410px;
@order-service-wizard-min-external-height: 300px;

.order-service-details {
  flex: 0 1 auto;
  padding: 0 (@grid-gutter-width / 2);
  @media (min-width: @screen-sm-min) {
    border-right: 1px solid @color-pf-black-400;
    width: 50%;
  }
  .order-service-details-top {
    align-items: center;
    display: flex;
    .service-icon {
      margin-right: 15px;
      .icon {
        font-size: 60px;
        @media (min-width: @order-service-title-sm-min) {
          font-size: 64px;
        }
      }
      .image {
        img {
          max-height: 52px;
          max-width: 52px;
          @media (min-width: @order-service-title-sm-min) {
            max-height: 60px;
            max-width: 60px;
          }
        }
      }
    }
    .service-title {
      font-size: 18px;
      font-weight: 600;
      .line-clamp(3, 1.4em); // limit to 3 lines
      @media (min-width: @order-service-title-sm-min) {
        font-size: 22px;
      }
    }
    .service-title-area {
      flex: 1 1 0%; // for .word-break()
      .word-break();
    }
    .sub-title {
      font-size: 20px;
      font-weight: 600;
      color: @color-pf-black-600;
    }
  }
  .order-service-description-block {
    margin-top: 15px;
    .description {
      .line-clamp(5); // limit to 5 lines
      white-space: pre-wrap;
    }
    .learn-more-link {
      font-size: @font-size-small;
      white-space: nowrap;
    }
  }
  .order-service-documentation-url {
    margin-top: 4px;
  }
  .order-service-tags {
    margin-top: 5px;
    .tag {
      margin-right: 5px;
      text-transform: uppercase;
    }
  }
}

.order-service-config {
  padding: 0 (@grid-gutter-width / 2);
  @media (max-width: @screen-xs-max) {
    position: relative; // so label.required:before are positioned correctly
  }
  @media (min-width: @screen-sm-min) {
    margin-bottom: -(@grid-gutter-width / 2);
    margin-top: -(@grid-gutter-width / 2);
    overflow-y: auto;
    padding-right: 0;
    .scroll-shadows-vertical(65%, 0.25);
    width: 50%;
    _::-webkit-full-page-media, _:future, :root & { // only target Safari
      .scroll-shadows-vertical-with-covers(65%, 0.25);
    }
  }
  h3 {
    line-height: 1.4;
    margin-top: 0;
    + .alert {
      margin-top: 20px;
    }
  }
  .select-plans {
    .plan-name {
      display: inline-block;
      font-size: 14px;
      margin-bottom: 5px;
      margin-top: -2px;
    }
    .radio {
      margin-top: 15px;
    }
  }
  .config-top {
    @media (min-width: @screen-sm-min) {
      flex: 1 1 auto; // IE
    }
    .adv-ops {
      height: 30%;
    }
    .adv-ops-href {
      cursor: pointer;
      font-size: 14px;
      &::after {
        content: '\f105';
        font-family: 'FontAwesome';
        padding-left: 10px;
      }
      &.collapsed {
        &::after {
          content: '\f107';
        }
      }
    }
    .adv-ops-container {
      padding-top: 2px;
    }
  }
  .config-bottom {
    height: 12%;
    float: right;
    margin-right: -13px;
    margin-top: 8px;
    margin-right: -10px;
  }
  .footer-panel {
    padding-top: 10px;
    text-align: center;

    a {
      color: @color-pf-white;
      &:hover {
        color: @color-pf-white;
        text-decoration: none;
      }
    }
  }
  .sub-title {
    margin: -5px 0 10px 25px;
  }
  .success-check {
    color: @color-pf-green-400;
  }
  .related-services-container {
    background-color: @color-pf-black-200;
    margin-top: 62px;
    padding: 14px;
    display: flex;
    align-items: center;
    .related-services-label {
      font-size: 14px;
      font-weight: 600;
      padding-right: 14px;
    }
    .related-services-row {
      .card {
        background-color: @color-pf-white;
        border:1px solid @color-pf-black-400;
        float: right;
        margin-right: 6px;
        padding: 11px;
      }
    }
  }
  .review-message {
    padding-left: 10px;
  }
  .review-status {
    display: flex;
    font-size: 16px;

    .pficon {
      margin-top: 3px;
    }
    .spinner.spinner-sm {
      height: 16px;
      margin: 3px 0 0;
      width: 16px;
    }
  }
}

.order-service-wizard-step.wizard-pf-main {
  @media (min-width: @screen-sm-min) {
    height: @order-service-page-height + @grid-gutter-width;
    max-height: calc(100vh ~"-" @order-service-wizard-min-external-height);
    min-height: 200px;
    overflow-y: auto;
  }

  .schema-form-fieldset {
    margin-bottom: 40px;
    margin-top: 40px;

    legend {
      border-bottom: none;
      border-top: solid 1px rgba(0, 0, 0, 0.15);
      margin-bottom: 10px;
      padding-top: 20px;
    }
  }
}

